hphp/hack/test/extended_reasons/static_method.php.exp
error: Typing[4110] Invalid return type

File static_method.php, line 11, character 10 - line 11, character 11:

  7 | }
  8 | 
  9 | function bar(): int {
 10 |   $x = C::foo();
 11 |   return »$x«;
 12 | }

Expected int

File static_method.php, line 9, character 17 - line 9, character 19:

 7 | }
 8 | 
 9 | function bar(): »int« {
10 |   $x = C::foo();
11 |   return $x;
12 | }

But got bool

File static_method.php, line 4, character 33 - line 4, character 36:

 3 | class C {
 4 |   public static function foo(): »bool« {
 5 |     return true;
 6 |   }
 7 | }

Here's why:


  Step 1 of 1                                 (here is where the error occurred) 

I started by checking this subtype relationship.

The subtype comes from this hint

File static_method.php, line 4, character 33 - line 4, character 36:

 3 | class C {
 4 |   public static function foo(): »bool« {
 5 |     return true;
 6 |   }
 7 | }

and flows into this expression

File static_method.php, line 10, character 8 - line 10, character 15:

 7 | }
 8 | 
 9 | function bar(): int {
10 |   $x = »C::foo()«;
11 |   return $x;
12 | }

as the return type of the function call

which itself flows into this expression

File static_method.php, line 10, character 3 - line 10, character 4:

 7 | }
 8 | 
 9 | function bar(): int {
10 |   »$x« = C::foo();
11 |   return $x;
12 | }

via an assignment

which itself flows into this expression

File static_method.php, line 11, character 10 - line 11, character 11:

  7 | }
  8 | 
  9 | function bar(): int {
 10 |   $x = C::foo();
 11 |   return »$x«;
 12 | }

as the type of the local variable

which itself flows into this expression

File static_method.php, line 11, character 3 - line 11, character 12:

  7 | }
  8 | 
  9 | function bar(): int {
 10 |   $x = C::foo();
 11 |   »return $x;«
 12 | }

because it is used in a return position

The supertype comes from this hint

File static_method.php, line 9, character 17 - line 9, character 19:

 7 | }
 8 | 
 9 | function bar(): »int« {
10 |   $x = C::foo();
11 |   return $x;
12 | }

